2007-04-12  Mats Cronqvist  <mats.cronqvist@ericsson.com>

	* elisp/erl-service.el (erl-set-cookie, erl-get-cookie): 
	sets/gets the lisp side cookie. if emacs and erlang are running on
	different machines you typically want to set the lisp side cookie
	to the same as on the erlang side (use erlang:get_cookie/0).

2007-02-27  Luke Gorrie  <luke@synap.se>

	* elisp/erl-service.el (erl-check-backend, &erl-load-backend):
	If the Erlang node does not have the Distel modules available in
	the code path then patch them in directly as binaries using RPC.
	Now you don't have to bother adding Distel to the code path and
	should be able to connect to any Erlang node (e.g. on a target
	system).

	* elisp/net-fsm.el (fsm-shutdown): Fixed annoying bug.

	* elisp/erl.el (erl-binary, erl-binaryp, erl-binary-string):
	Added explicit binary datatype that is sent to Erlang as a binary.

	* elisp/erlext.el (erl-tag): Switched from defconst to defvar to
	avoid unnecessarily redefining (which blows everything).
	Added encoding of binaries.

2006-09-25  Mats Cronqvist  <mats.cronqvist@ericsson.com>

	* src/distel.erl: added erl-reload-modules. reloads all modules
	that are out of date. compares time of compilation for the loaded
	code and the code in the corresponding beam file.
	* elisp/distel.el: bound erl-reload-modules to C-c C-d r.
	
2006-09-04  Mats Cronqvist  <mats.cronqvist@ericsson.com>

	* src/distel.erl (Module): reload_module/2; 1st arg assumed to be
	sting, could be atom or string.  resolved by creating to_atom/1
	and to_bin/1. got rid of l2a/1 and l2b/1.

2006-08-03  Mats Cronqvist  <mats.cronqvist@ericsson.com>

	* src/distel.erl (Module): had problems in guess_source_file/2;
	1st arg was assumed to be atom, but could be atom or list.
	wound up creating 3 functions;
	
	l2a/1 - list_to_atom
	l2b/1 - list_to_binary
	to_list - *_to_list

	and use them consistently.
	
2006-05-15  Mats Cronqvist  <mats.cronqvist@ericsson.com>
